# netbsd-operating_system

./: .gitmodules  CMakeLists.txt  _.cmake  cmake_install.cmake
operating_system/: cmake_install.cmake
operating_system/operating_system-netbsd/acme_netbsd/: cmake_install.cmake
operating_system/operating_system-netbsd/apex_netbsd/: cmake_install.cmake
operating_system/operating_system-netbsd/aura_netbsd/: cmake_install.cmake
operating_system/operating_system-netbsd/desktop_environment_gtk_based/: cmake_install.cmake
operating_system/operating_system-netbsd/node_netbsd/: cmake_install.cmake
operating_system/operating_system-posix/acme_posix/: cmake_install.cmake
operating_system/operating_system-posix/apex_posix/: cmake_install.cmake
operating_system/operating_system-posix/audio_audio/: cmake_install.cmake
operating_system/operating_system-posix/aura_posix/: cmake_install.cmake
operating_system/operating_system-posix/nano_dynamic_library_dl/: cmake_install.cmake
operating_system/operating_system-posix/nano_dynamic_library_dl_null/: cmake_install.cmake
operating_system/operating_system-posix/nano_http_command_line/: cmake_install.cmake
operating_system/operating_system-posix/nano_user_cairo/: cmake_install.cmake
operating_system/operating_system-posix/nano_user_x11/: cmake_install.cmake
operating_system/operating_system-posix/node_gdk/: cmake_install.cmake
operating_system/operating_system-posix/node_gtk3/: cmake_install.cmake
operating_system/operating_system-posix/node_gtk_based/: cmake_install.cmake
operating_system/operating_system-posix/windowing_posix/: cmake_install.cmake
operating_system/operating_system-posix/windowing_system_x11/: cmake_install.cmake
operating_system/operating_system-posix/windowing_x11/: cmake_install.cmake
operating_system/operating_system-posix/windowing_xcb/: cmake_install.cmake
operating_system/operating_system-posix/write_text_pango/: cmake_install.cmake
port/: cmake_install.cmake
port/base/id3lib/: cmake_install.cmake
port/base/unac/: cmake_install.cmake
source/: cmake_install.cmake
source/app/: cmake_install.cmake
source/app/acme/: cmake_install.cmake
source/app/apex/: cmake_install.cmake
source/app/aqua/: cmake_install.cmake
source/app/aura/: cmake_install.cmake
source/app/axis/: cmake_install.cmake
source/app/base/: cmake_install.cmake
source/app/bred/: cmake_install.cmake
source/app/compress_bzip2/: cmake_install.cmake
source/audio/: cmake_install.cmake
source/audio-generation1/: cmake_install.cmake
source/integration/: cmake_install.cmake
(+31 files in other folders)
