cmake_minimum_required(VERSION 3.16)
project(netbsd-operating_system)



add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)



add_subdirectory(operating_system-netbsd/node_netbsd)
add_subdirectory(operating_system-posix/acme_posix)
#add_subdirectory(operating_system-darwin/acme_darwin)
add_subdirectory(operating_system-netbsd/acme_netbsd)
add_subdirectory(operating_system-posix/apex_posix)
#add_subdirectory(operating_system-darwin/apex_darwin)
add_subdirectory(operating_system-netbsd/apex_netbsd)
add_subdirectory(operating_system-posix/aura_posix)
#add_subdirectory(operating_system-darwin/aura_darwin)
add_subdirectory(operating_system-netbsd/aura_netbsd)
if(LXDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-netbsd/desktop_environment_gnome)
elseif(${GTK_BASED_DESKTOP})
    add_subdirectory(operating_system-posix/node_gdk)
    add_subdirectory(operating_system-posix/nano_user_cairo)
    add_subdirectory(operating_system-posix/windowing_posix)
    add_subdirectory(operating_system-posix/windowing_system_x11)
    add_subdirectory(operating_system-posix/nano_user_x11)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/windowing_xcb)
if(${HAS_GTK4})
    add_subdirectory(operating_system-posix/node_gtk4)
elseif(${HAS_GTK3})
    add_subdirectory(operating_system-posix/node_gtk3)
endif()
    add_subdirectory(operating_system-posix/node_gtk_based)
    add_subdirectory(operating_system-netbsd/desktop_environment_gtk_based)
elseif(${XFCE_DESKTOP})
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_xfce)
    add_subdirectory(operating_system-netbsd/desktop_environment_xfce)
elseif(${KDE_DESKTOP})
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/windowing_xcb)
    add_subdirectory(operating_system-posix/node_kde)
    add_subdirectory(operating_system-netbsd/desktop_environment_kde)
endif()


add_subdirectory(operating_system-posix/write_text_pango)
add_subdirectory(operating_system-posix/audio_sndio)
#add_subdirectory(operating_system-netbsd/audio_mixer_alsa)
#add_subdirectory(operating_system-netbsd/music_midi_alsa)



